# jetbot_diff_drive

./: .gitmodules  CMakeLists.txt  README.md  package.xml
config/: diff_drive.yaml  pid.yaml
doc/maps/: house.yaml  jetbot_map.pgm  jetbot_map.yaml
launch/: gazebo.launch  jetbot.launch  jetbot_gazebo.launch  jetbot_rviz.launch  jetbot_rviz_gazebo.launch
meshes/ball/: model.config  model.sdf
meshes/gps/: gps_mtk3339.stl
meshes/imu/: bno055.stl
model/ball/: model.sdf
model/ball/meshes/: soccer_ball.dae
rviz/: jetbot.rviz
urdf/: _jetbot.urdf  includes.xacro  jetbot.xacro
urdf/includes/gazebo/: gps.gazebo.xacro  imu.gazebo.xacro  inertias.xacro  jetbot.gazebo.xacro  laser.gazebo.xacro  sonar.gazebo.xacro  transmission.xacro
urdf/includes/materials/: materials.xacro
urdf/includes/parts/: antenna.xacro  boards.xacro  camera.xacro  chassis.xacro
urdf/includes/parts/sensors/gps/: mtk3339.urdf.xacro
urdf/includes/parts/sensors/imu/: bno055.urdf.xacro
urdf/includes/parts/sensors/laser/: laser.urdf.xacro
urdf/includes/parts/sensors/realsense/: _d435.urdf.xacro
urdf/includes/parts/sensors/rgbcam/: camera.xacro
urdf/includes/parts/sensors/sonar/: hcsr04.urdf.xacro
urdf/includes/parts/wheels/: caster.xacro  wheel.xacro
world/: jetbot.world  willow_garage.world
